<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sr.broadcastalarmsharedprederences.MainActivity">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:id="@+id/notificationButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="showNotification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationButton"
        android:text="@string/stop_notification"
        android:id="@+id/stopButton"
        android:layout_alignParentStart="true"
        android:onClick="stopNotification"
        app:layout_constraintTop_toBottomOf="@+id/notificationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stopButton"
        android:text="@string/late_notification"
        android:id="@+id/lateButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="setAlarm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/stopButton" />

    <Button
        android:id="@+id/settingBttn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="setting"
        app:layout_constraintTop_toBottomOf="@+id/lateButton"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/newSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:onClick="newSettings"
        android:text="@string/updatesettings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingBttn" />

</android.support.constraint.ConstraintLayout>
